force-app/main/default/objects/custom_create346__c/custom_create346__c.object-meta.xml
<CustomObject>
    <label>Custom created object346</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects346</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>