force-app/main/default/objects/custom_create346__c/fields/custom_create_346field585__c.field-meta.xml
<CustomField>
    <fullName>custom_create_346field585__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 346field585</label>
    <type>Checkbox</type>
</CustomField>